@@ -14,6 +14,7 @@ gource_SOURCES = \
 	src/core/display.cpp src/core/display.h \
 	src/core/frustum.cpp src/core/frustum.h \
 	src/core/fxfont.cpp src/core/fxfont.h \
+	src/core/gl.h \
 	src/core/logger.cpp src/core/logger.h \
 	src/core/mousecursor.cpp src/core/mousecursor.h \
 	src/core/pi.h \
@@ -32,6 +33,7 @@ gource_SOURCES = \
 	src/core/utf8/core.h \
 	src/core/utf8/unchecked.h \
 	src/core/utf8/utf8.h \
+	src/core/vbo.cpp src/core/vbo.h \
 	src/core/vectors.h \
 	src/custom.cpp src/custom.h \
 	src/cvs-exp.cpp src/cvs-exp.h \
@@ -52,7 +54,6 @@ gource_SOURCES = \
 	src/svn.cpp src/svn.h \
 	src/textbox.cpp src/textbox.h \
 	src/user.cpp src/user.h \
-	src/vbo.cpp src/vbo.h \
 	src/zoomcamera.cpp src/zoomcamera.h
 
 CPPFLAGS = -DSDLAPP_RESOURCE_DIR=\"$(pkgdatadir)\"
@@ -60,7 +61,7 @@ CPPFLAGS = -DSDLAPP_RESOURCE_DIR=\"$(pkgdatadir)\"
 dist_pkgdata_DATA = data/beam.png data/bloom.tga data/bloom_alpha.tga data/cursor.png data/file.png data/no_photo.png data/gource.style
 
 shadersdir = $(pkgdatadir)/shaders
-dist_shaders_DATA = data/shaders/shadow.vert data/shaders/shadow.frag data/shaders/bloom.vert data/shaders/bloom.frag
+dist_shaders_DATA = data/shaders/shadow.vert data/shaders/shadow.frag data/shaders/bloom.vert data/shaders/bloom.frag data/shaders/text.vert data/shaders/text.frag
 
 install-data-hook:
 	mkdir -p -m 755 ${DESTDIR}/$(mandir)/man1
